Add spring boot 3 support (#24)